--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   intl: ^0.20.2
   timezone: ^0.10.0
   expandable_datatable: ^0.0.7
+  flutter_bloc: ^9.0.0
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
