--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   connectivity_plus: ^6.1.3
   flutter_bloc: any
   form_builder_validators: any
+  responsive_grid: ^2.4.4
 
 dev_dependencies:
   flutter_test:
