--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   responsive_grid: ^2.4.4
   pinput: any
   sms_autofill: ^2.4.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
