--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   pinput: any
   sms_autofill: ^2.4.1
   provider: ^6.1.2
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
