--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   pinput: any
   sms_autofill: ^2.4.1
   provider: ^6.1.2
+  fl_chart: ^0.70.2
+  graphic: ^2.5.1
+  syncfusion_flutter_charts: ^28.2.11
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
