--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   pie_chart: ^5.4.0
   circular_countdown_timer: ^0.2.4
   flutter_onboarding_slider: ^1.0.11
+  qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -45,11 +47,7 @@ flutter:
   assets:
     - assets/image/upload.png
     - assets/dumb.json
-    - assets/image/group.jpg
-    - assets/image/pngtree4.png
-    - assets/image/istockph.jpg
-    - assets/image/BEAUTIFUL.png
-    - assets/image/tumblr.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
