--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   circular_countdown_timer: ^0.2.4
   flutter_onboarding_slider: ^1.0.11
   qr_flutter: ^4.1.0
-  qr_code_scanner: ^1.0.1
+  flutter_slidable: ^4.0.0
+  signature: ^5.5.0
 
 dev_dependencies:
   flutter_test:
