--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_slidable: ^4.0.0
   signature: ^5.5.0
+  # flutter_osm_plugin: ^1.3.8
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
+  external_path: ^2.2.0
+  # google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
