--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   external_path: ^2.2.0
+  intl_phone_field: ^3.2.0
   # google_mobile_ads: ^6.0.0
 
 dev_dependencies:
