--- a/lib/material_widgets/JSON_latest/layout_element/appbar.json
+++ b/lib/material_widgets/JSON_latest/layout_element/appbar.json
@@ -2395,7 +2395,7 @@
         },
         {
             "name": "branding",
-            "_type": "string",
+            "_type": "fileUpload",
             "selectionList": [],
             "value": "",
             "enabled": true,
