--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   external_path: ^2.2.0
   intl_phone_field: ^3.2.0
+  flutter_tts: ^4.2.2
   # google_mobile_ads: ^6.0.0
 
 dev_dependencies:
