--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   external_path: ^2.2.0
   intl_phone_field: ^3.2.0
   flutter_tts: ^4.2.2
+  dropdown_search: ^6.0.2
+  pin_code_fields: ^8.0.1
   # google_mobile_ads: ^6.0.0
 
 dev_dependencies:
