--- a/lib/material_widgets/JSON_latest/layout_element/appbar.json
+++ b/lib/material_widgets/JSON_latest/layout_element/appbar.json
@@ -18,7 +18,10 @@
                 "primary",
                 "secondary",
                 "tertiary",
-                "transparent"
+                "transparent",
+                "light",
+                "dark",
+                "greyShade"
             ],
             "value": "primary",
             "enabled": true
