last changes in color remove

--- a/lib/JSON/Default/appbar.json
+++ b/lib/JSON/Default/appbar.json
@@ -20,10 +20,7 @@
                 "tertiary",
                 "primaryAccent",
                 "secondaryAccent",
-                "transparent",
-                "light",
-                "dark",
-                "greyShade"
+                "transparent"
             ],
             "value": "transparent",
             "enabled": true
@@ -37,10 +34,7 @@
                 "tertiary",
                 "primaryAccent",
                 "secondaryAccent",
-                "transparent",
-                "light",
-                "dark",
-                "greyShade"
+                "transparent"
             ],
             "value": "primary",
             "enabled": true
